--- a/src/components/Right/Comments.css
+++ b/src/components/Right/Comments.css
@@ -1,10 +1,9 @@
 #CommentSection
 {
-    display: flex;
     flex-direction: column;
     background-color: purple;
     position: relative;
-    max-width: 50%;
+    width: 50%;
     flex-wrap: nowrap;
     align-self: flex-end;
 }
