--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+#page {
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  grid-template-areas:
+    "nav  main"
+    "foot  foot";
+  grid-template-rows: 1fr 75px;
+  grid-template-columns: 300px 1fr;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#page > nav {
+  grid-area: nav;
+  background-color: orange;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#page > main {
+  grid-area: main;
+  background-color: #ffff64;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#page > footer {
+  grid-area: foot;
+  background-color: #8cffa0;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
