--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -1,15 +1,12 @@
 .Soundbar
 {
   background: black;
-  display: flex;
   flex-direction: row;
-  width: 100%;
-  height: 5%;
+  width: 100vw;
+  height: 75px;
   overflow: hidden;
-  background-color: blue;
-  position: fixed;
-  justify-content: space-evenly;
-  bottom: 0;
+  background-color: black;
+  align-items: center;
 }
 
 .Soundbar ul
@@ -18,7 +15,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 li
