--- a/src/components/Middle/Main View.css
+++ b/src/components/Middle/Main View.css
@@ -1,6 +1,7 @@
 #MainView
 {
   flex-direction: column;
-  background-color: green;
+  background-color: #242424;;
   height: 100%;
+  border-radius: 25px;
 }
