--- a/src/components/Containers/SidebarButton.css
+++ b/src/components/Containers/SidebarButton.css
@@ -34,7 +34,9 @@
 
 .SidebarButton:hover img
 {
+  transition: all 0.125s ease-in;
   width: 12%;
+
   filter: invert(100%) sepia(79%) saturate(1000%) hue-rotate(86deg);
 }
 
