--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,12 @@
 }
 
 #page > main {
-  grid-area: main;}
+  grid-area: main;
+  flex-direction: column;
+  background-color: #242424;;
+  height: 100%;
+  border-radius: 25px;
+}
 
 #page > footer {
   grid-area: foot;
