--- a/src/components/Containers/Popup.css
+++ b/src/components/Containers/Popup.css
@@ -1,5 +1,5 @@
 .popup-box {
-  background-color: rgb(1, 1, 1, 90%);
+  background-color: rgb(1, 1, 1, 85%);
 
   display: flex;
   flex-direction: column;
@@ -13,10 +13,11 @@
   opacity: 0%;
 }
 
-.didLoad {
-  transition: all 0.75s ease-in;
+.fadeIn {
+  transition: all 0.25s ease-in;
   opacity: 100%;
 }
+
 .popup-content {
   width: 50%;
   height: 30%;
