--- a/src/components/Containers/SongCreation.css
+++ b/src/components/Containers/SongCreation.css
@@ -2,3 +2,13 @@
   display: flex;
   flex-direction: column;
 }
+
+#upload-song-menu > ul {
+  display: flex;
+  flex-direction: column;
+  background-color: red;
+}
+
+#upload-song-menu > ul > li {
+  color: blue;
+}
