--- a/src/components/Middle/Account/AccountPage.css
+++ b/src/components/Middle/Account/AccountPage.css
@@ -16,3 +16,32 @@
   display: flex;
   flex-direction: column;
 }
+
+.account-layout .myAlbums {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 10px;
+  list-style-type: none;
+  height: 600px;
+  overflow: auto;
+}
+
+.myAlbums::-webkit-scrollbar-track {
+  border: 1px solid #000;
+  padding: 2px 0;
+  background-color: #404040;
+}
+
+.myAlbums::-webkit-scrollbar {
+  width: 10px;
+}
+
+.myAlbums::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #737272;
+  border: 1px solid #000;
+}
