--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,19 @@
 #page {
   display: grid;
-  gap: 0.75em;
+
   width: 100vw;
   height: 100vh;
   grid-template-areas:
     "nav  main"
     "foot  foot";
-  grid-template-rows: 1fr 75px;
-  grid-template-columns: 300px 1fr;
+
+
 
   background-color: black;
+  color: white;
+  gap: 0.75em;
+  grid-template-rows: 1fr 75px;
+  grid-template-columns: 300px 1fr;
 }
 
 #page > nav {
