--- a/src/components/Middle/Account/AccountPage.css
+++ b/src/components/Middle/Account/AccountPage.css
@@ -1,5 +1,6 @@
 .account-layout {
   margin-left: 100px;
+  margin-right: 100px;
   display: grid;
   gap: 0.75em;
   grid-template-areas:
@@ -7,36 +8,43 @@
     "main";
 }
 
-.account-layout > header {
-  background-color: green;
+.account-layout header {
+  max-height: 100px;
 }
 
-.account-layout > main {
-  background-color: blue;
+.account-layout main {
   display: flex;
   flex-direction: column;
 }
 
+.account-layout .profileStats
+{
+  display: flex;
+}
+
 .account-layout .myAlbums {
-  flex: 1;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  column-gap: 10px;
-  row-gap: 10px;
+  column-gap: 15px;
+  row-gap: 15px;
   list-style-type: none;
-  height: 600px;
   overflow: auto;
+}
+
+.myAlbums
+{
+  overflow: hidden;
+  max-height: 250px;
 }
 
 .myAlbums::-webkit-scrollbar-track {
   border: 1px solid #000;
-  padding: 2px 0;
   background-color: #404040;
 }
 
 .myAlbums::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 .myAlbums::-webkit-scrollbar-thumb {
@@ -45,3 +53,4 @@
   background-color: #737272;
   border: 1px solid #000;
 }
+
