--- a/src/components/Containers/PlaylistContainer.css
+++ b/src/components/Containers/PlaylistContainer.css
@@ -29,9 +29,10 @@
 
 .PlaylistContainer span {
 
+  margin-top: 7.5px;
   text-align: center;
   min-width: 150px;
-  font-size: 25px;
+  font-size: 20px;
   position: absolute;
   white-space: nowrap;
 
