--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -1,17 +1,16 @@
-.playlist-page img {
-  height: 200px;
-  width: 200px;
-  filter: drop-shadow(0 0 0.75rem black);
-}
-
 .playlist-page {
   position: relative;
   width: 100%;
   height: 100%;
-  display: flex;
   align-self: center;
   justify-self: center;
   background-size: cover;
+
+  display: grid;
+  gap: 0.75em;
+  grid-template-areas:
+    "header"
+    "main";
 }
 
 .Playlist-Layout {
@@ -23,6 +22,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+.playlistHeader > img {
+  height: 200px;
+  width: 200px;
+  filter: drop-shadow(0 0 0.75rem black);
 }
 
 .playlistHeader .info {
@@ -37,7 +41,64 @@
   color: rgb(197, 197, 197);
 }
 
-.playlist-content
-{
-  
+.song-table > hr {
+  min-width: 100%;
+  color: white;
+  background-color: white;
+  border-color: white;
+  border: 0;
+  border-top: 1px solid white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+/*Song row stuff*/
+
+.song-table {
+  display: grid;
+  grid-template-columns: auto;
+  /*
+  row-gap: 10px;
+  padding-right: 80px;
+  width: 80vw;
+  */
+}
+
+.song-table-header {
+}
+
+.song-row {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto;
+
+  background-color: rgba(0, 0, 0, 0.74);
+  user-select: none;
+  align-items: center;
+  gap: 30px;
+  height: 65px;
+  padding-left: 7.5px;
+}
+
+.song-row:hover {
+  filter: brightness(50%);
+}
+
+.song-row > img {
+  height: 50px;
+  width: 50px;
+}
+
+.song-row > .song-row-name {
+  width: 40vw;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.song-row > .song-row-album {
+  width: 25vw;
+}
+
+.song-row > .song-row-date {
+  width: 10vw;
 }
