--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,12 @@
     "nav  main"
     "foot  foot";
 
-
-
   background-color: black;
   color: white;
   gap: 0.75em;
   grid-template-rows: 1fr 75px;
   grid-template-columns: 300px 1fr;
+  overflow-y: hidden;
 }
 
 #page > nav {
@@ -26,6 +25,7 @@
   background-color: #242424;
   height: 100%;
   border-radius: 25px;
+  overflow-y: hidden;
 }
 
 #page > footer {
