--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -1,7 +1,7 @@
 .playlist-page {
-  position: relative;
   width: 100%;
   height: 100%;
+
   align-self: center;
   justify-self: center;
   background-size: cover;
@@ -11,10 +11,29 @@
   grid-template-areas:
     "header"
     "main";
+
+  overflow-y: auto;
+}
+div::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar {
+  width: 12px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #818181;
 }
 
 .Playlist-Layout {
-  margin-left: 50px;
+  /* When song is active for a bit
+  transition with this filter: opacity(0%);*/
+
+  margin-left: 55px;
   margin-top: 50px;
 }
 
@@ -41,6 +60,14 @@
   color: rgb(197, 197, 197);
 }
 
+.text-bold {
+  font-weight: bold;
+}
+
+.text-bigger {
+  font-size: large;
+}
+
 .song-table > hr {
   min-width: 100%;
   color: white;
@@ -55,47 +82,51 @@
 
 .song-table {
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  /*
+  grid-template-columns: 75px 50% 20% 10%;
   row-gap: 10px;
-  padding-right: 80px;
-  width: 80vw;
-  */
-}
-
-.song-table-header {
+  width: calc(100% - 150px);
+  grid-auto-rows: 1fr;
+  justify-content: center;
 }
 
 .song-row {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto;
-
-  background-color: rgba(0, 0, 0, 0.74);
+  display: contents;
   user-select: none;
-  align-items: center;
-  gap: 30px;
-  height: 65px;
-  padding-left: 7.5px;
+  background-color: rgba(136, 136, 136, 0.177);
 }
 
-.song-row:hover {
-  filter: brightness(50%);
+.song-row:hover > div {
+  background-color: rgba(136, 136, 136, 0.177);
 }
 
-.song-table > img {
+.song-row > div > img {
+  border-radius: 10%;
+
   height: 50px;
   width: 50px;
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-right: 5px;
 }
 
 .song-row-name {
   overflow: hidden;
-  text-overflow: ellipsis;
   white-space: nowrap;
+  padding-top: 7px;
+  padding-right: 50px;
 }
 
 .song-row-album {
+  padding-top: 18.2px;
+  padding-right: 50px;
 }
 
 .song-row-date {
+  padding-top: 18.2px;
+}
+
+.overflow-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
