--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -1,5 +1,4 @@
-#Soundbar
-{
+#Soundbar {
   display: flex;
   background: black;
   flex-direction: row;
@@ -12,16 +11,13 @@
   align-items: center;
 }
 
-
-#Soundbar .control-btn
-{
+#Soundbar .control-btn {
   height: 45px;
   filter: invert(100%);
   margin-inline: 10px;
 }
 
-#Soundbar .control-btn:hover
-{
+#Soundbar .control-btn:hover {
   filter: invert(100%) sepia(79%) saturate(1000%) hue-rotate(86deg);
 }
 /*
