--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -1,5 +1,4 @@
-:root
-{
+:root {
   --progress: 0%;
   --playback: hidden;
 }
@@ -8,16 +7,59 @@
   background: black;
   flex-direction: row;
   width: 100vw;
-  height: 65px;
+  height: 58px;
   overflow: hidden;
   background-color: black;
   user-select: none;
   justify-content: center;
   align-items: center;
+  margin-top: -5px;
+}
+
+#Soundbar > .name-area {
+  overflow: hidden;
+  white-space: nowrap;
+  padding-bottom: 5px;
+  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 25%;
+}
+
+.name-area > .name-area-content {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.name-area > .name-area-content img {
+  margin-right: 25px;
+  height: 50px;
+  width: 50px;
+}
+
+.name-area-content > .name-area-content-text {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Buttons*/
+.volume-control-container {
+  display: flex;
+  justify-content: flex-end;
+
+  width: 25%;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 
 #Soundbar .control-btn {
-  height: 45px;
   filter: invert(100%);
   margin-inline: 10px;
 }
@@ -25,67 +67,58 @@
 #Soundbar .control-btn:hover {
   filter: invert(100%) sepia(79%) saturate(1000%) hue-rotate(86deg);
 }
+#play-btn {
+  height: 40px;
+}
+
+#prev-btn,
+#next-btn {
+  height: 30px;
+}
+
+/*Sliders*/
+#progress-bar-container-touch {
+  position: relative;
+  cursor: pointer;
+  height: 20px;
+  background-color: black;
+  display: flex;
+  align-items: center;
+}
 
 #progress-bar-container {
   position: relative;
   display: flex;
-  cursor: pointer;
-  height: 5%;
+  height: 20%;
   width: 100%;
-  margin: 0;
+
+  margin-bottom: 5px;
   outline: none;
   background-color: #242424;
 }
-
 
 #progress-bar {
   background-color: rgb(141, 255, 255);
   width: var(--progress);
 }
 
-#progress-bar-handle
-{
+#progress-bar-handle {
   background-color: white;
   color: transparent;
   visibility: hidden;
   height: 15px;
-  width : 15px;
+  width: 15px;
   border-radius: 50%;
   margin-top: -5px;
   margin-left: -7.5px;
   z-index: 2;
 }
 
-#progress-bar-container:hover #progress-bar-handle
-{
+#progress-bar-container-touch:hover #progress-bar-handle {
   visibility: visible;
 }
 
-
-/*
-.Soundbar ul
-{
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  gap: -12px;
+#volume-control {
+  accent-color: rgb(141, 255, 255);
+  margin-right: 5px;
 }
-
-.Soundbar li
-{
-  text-decoration: none;
-}
-
-.Soundbar img
-{
-  width:7.5%;
-
-  filter: invert(100%);
-}
-
-.Soundbar img:hover
-{
-  filter: invert(100%) sepia(79%) saturate(1000%) hue-rotate(86deg);
-}
-*/
