Fixed bugs and Added Changes

--- a/src/components/Containers/Popups/PlaylistCreation.css
+++ b/src/components/Containers/Popups/PlaylistCreation.css
@@ -1,14 +1,14 @@
-#upload-song-menu {
+#upload-playlist-menu {
   display: flex;
   flex-direction: column;
 }
 
-#upload-song-menu > ul {
+#upload-playlist-menu > ul {
   display: flex;
   flex-direction: column;
   background-color: red;
 }
 
-#upload-song-menu > ul > li {
+#upload-playlist-menu > ul > li {
   color: blue;
 }
