--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -15,6 +15,7 @@
   overflow-y: auto;
   user-select: none;
 }
+
 div::-webkit-scrollbar-track {
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0);
@@ -83,7 +84,7 @@ div::-webkit-scrollbar-thumb {
 
 .song-table {
   display: grid;
-  grid-template-columns: 75px 50% 20% 10%;
+  grid-template-columns: 62px 50% 20% 10%;
   row-gap: 10px;
   width: calc(100% - 150px);
   grid-auto-rows: 1fr;
@@ -113,9 +114,12 @@ div::-webkit-scrollbar-thumb {
 
 .audioGIF {
   filter: brightness(100) sepia(79%) saturate(1000%) hue-rotate(86deg);
+}
+
+.smallIcon {
   display: block;
-  padding-left: 15%;
-  padding-top: 15%;
+  padding-left: 20%;
+  padding-top: 20%;
   max-width: 25px;
   max-height: 25px;
 }
@@ -124,7 +128,7 @@ div::-webkit-scrollbar-thumb {
   overflow: hidden;
   white-space: nowrap;
   padding-top: 7px;
-  padding-right: 50px;
+  /*padding-right: 50px;*/
 }
 /*
   filter: brightness(100) sepia(79%) saturate(1000%) hue-rotate(86deg);
@@ -136,7 +140,12 @@ div::-webkit-scrollbar-thumb {
   padding-top: 18.2px;
   padding-right: 50px;
 }
-
+.song-row-album a {
+  color: white;
+}
+.song-row-album a:hover {
+  color: #8dffff;
+}
 .song-row-date {
   padding-top: 18.2px;
 }
