--- a/src/components/Containers/Playlist Containers/PlaylistContainer.css
+++ b/src/components/Containers/Playlist Containers/PlaylistContainer.css
@@ -2,9 +2,9 @@
   background-color: black;
   color: white;
 
-  width: 150px;
-  height: 200px;
-
+  width: 165px;
+  height: 215px;
+  border-radius: 10px;
   display: flex;
   white-space: nowrap;
 
@@ -12,6 +12,28 @@
   position: relative;
   overflow: hidden;
   flex-direction: column;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.pl-container-content {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.pl-container-name_holder {
+  max-width: 85%;
+  font-size: 20px;
+
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: block;
+  overflow: hidden;
 }
 
 .PlaylistContainer:hover {
@@ -22,21 +44,16 @@
 }
 
 .PlaylistContainer img {
-  width: 150px;
-  height: 150px;
+  border-radius: 10px;
+  width: 130px;
+  height: 130px;
+  background-color: rgb(24, 24, 24);
 }
 
-.PlaylistContainer span {
-  margin-top: 7.5px;
-  text-align: center;
-  min-width: 150px;
-  font-size: 20px;
-  position: absolute;
-  white-space: nowrap;
+.pl-container-content a {
+  color: rgb(197, 197, 197);
 }
 
-/*make sure that calc(x - 100%), x is equal to width of the object*/
-.PlaylistContainer:hover span {
-  transform: translateX(calc(150px - 100%));
-  transition: 4s;
+.pl-container-content a:hover {
+  color: #8dffff;
 }
