--- a/src/components/Containers/SidebarButton.css
+++ b/src/components/Containers/SidebarButton.css
@@ -10,6 +10,16 @@
   display: flex;
 }
 
+@media screen and (max-width: 468px) {
+  .SidebarButton p {
+    display: none;
+  }
+
+  .SidebarButton {
+    height: 50px;
+  }
+}
+
 .SidebarButton p {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -40,3 +50,18 @@
   margin-bottom: 15px;
   margin-top: 20px;
 }
+
+/*
+@media screen and (min-width: 468px) {
+  .SidebarButton {
+    border: none;
+    color: white;
+    width: 270px;
+    user-select: none;
+    margin-top: 5px;
+    margin-left: 10px;
+    overflow: hidden;
+    border-radius: 35px;
+    display: flex;
+  }
+}*/
