--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 #page > main {
   grid-area: main;
   flex-direction: column;
-  background-color: #242424;
+  background-color: rgb(19, 19, 19);
   height: 100%;
   border-radius: 25px;
   overflow-y: hidden;
@@ -30,5 +30,6 @@
 
 #page > footer {
   grid-area: foot;
+
   visibility: var(--playback);
 }
