--- a/src/components/Left/Sidebar.css
+++ b/src/components/Left/Sidebar.css
@@ -5,6 +5,6 @@
   padding: 0px;
   height: 100%;
   width: 100%;
-  background-color: #242424;
+  background-color: rgb(19, 19, 19);
   border-radius: 25px;
 }
