--- a/src/components/Middle/Account/AccountPage.css
+++ b/src/components/Middle/Account/AccountPage.css
@@ -1,6 +1,7 @@
 .account-layout {
-  margin-left: 100px;
-  margin-right: 100px;
+  width: 100%;
+  height: 100%;
+
   display: grid;
   gap: 0.75em;
   grid-template-areas:
@@ -8,15 +9,19 @@
     "main";
 
   user-select: none;
+
+  overflow-y: auto;
 }
 
 .account-layout header {
   max-height: 100px;
+  margin-left: 100px;
 }
 
 .account-layout main {
   display: flex;
   flex-direction: column;
+  margin-left: 100px;
 }
 
 .account-layout .profileStats {
@@ -53,4 +58,19 @@
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #737272;
   border: 1px solid #000;
+}
+
+div::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar {
+  width: 12px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #818181;
 }
