--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -97,7 +97,7 @@
 
   margin-bottom: 5px;
   outline: none;
-  background-color: #242424;
+  background-color: rgb(19, 19, 19);
 }
 
 #progress-bar {
