--- a/src/components/Middle/Account/AccountPage.css
+++ b/src/components/Middle/Account/AccountPage.css
@@ -16,6 +16,9 @@
 .account-layout header {
   max-height: 100px;
   margin-left: 100px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 
 .account-layout main {
