--- a/src/components/Middle/Account/AccountPage.css
+++ b/src/components/Middle/Account/AccountPage.css
@@ -1,6 +1,9 @@
-.account-layout {
+.account-page {
   width: 100%;
   height: 100%;
+
+  align-self: center;
+  justify-self: center;
 
   display: grid;
   gap: 0.75em;
@@ -8,26 +11,40 @@
     "header"
     "main";
 
-  user-select: none;
-
   overflow-y: auto;
+  user-select: none;
+}
+
+.account-layout {
+  margin-left: 100px;
+  margin-top: 50px;
 }
 
 .account-layout header {
-  max-height: 100px;
-  margin-left: 100px;
+  max-height: 175px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  gap: 15px;
+}
+
+.account-layout header h1 {
+  margin: 0;
   display: flex;
   align-items: center;
   gap: 15px;
 }
 
-.account-layout main {
-  display: flex;
+.account-layout header .info {
+  margin-left: 20px;
   flex-direction: column;
-  margin-left: 100px;
 }
 
-.account-layout .profileStats {
+.account-layout header .info h2 {
+  color: rgb(197, 197, 197);
+}
+
+.account-layout main {
   display: flex;
   flex-direction: column;
 }
