--- a/src/components/Middle/MyPlaylistPage.css
+++ b/src/components/Middle/MyPlaylistPage.css
@@ -1,17 +1,23 @@
-.myPlaylists-layout {
-  /*margin-left: 100px;
-  margin-right: 100px;*/
+.myPlaylists-page {
   width: 100%;
   height: 100%;
+
+  align-self: center;
+  justify-self: center;
+
   display: grid;
   gap: 0.75em;
   grid-template-areas:
     "header"
     "main";
 
-  user-select: none;
-
   overflow-y: auto;
+  user-select: none;
+}
+
+.myPlaylists-layout {
+  margin-left: 100px;
+  margin-top: 15px;
 }
 
 div::-webkit-scrollbar-track {
@@ -36,11 +42,9 @@ div::-webkit-scrollbar-thumb {
 .myPlaylists-layout main {
   display: flex;
   flex-direction: column;
-  margin-left: 100px;
 }
 
 .myPlaylists-layout header {
-  margin-left: 100px;
 }
 
 .myPlaylists-layout .myAlbums {
