--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -44,6 +44,7 @@ div::-webkit-scrollbar-thumb {
   flex-direction: row;
   align-items: center;
 }
+
 .playlistHeader > img {
   height: 200px;
   width: 200px;
@@ -61,6 +62,14 @@ div::-webkit-scrollbar-thumb {
 }
 .playlistHeader .info h2 {
   color: rgb(197, 197, 197);
+}
+
+.playlistHeader .info h2 a {
+  color: rgb(197, 197, 197);
+}
+
+.playlistHeader .info h2 a:hover {
+  color: #8dffff;
 }
 
 .text-bold {
