--- a/src/components/Containers/Popup.css
+++ b/src/components/Containers/Popup.css
@@ -36,4 +36,10 @@
 #upload-song-menu {
   display: flex;
   flex-direction: column;
+  width: 400px;
+
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 20px;
 }
