--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -64,11 +64,11 @@ div::-webkit-scrollbar-thumb {
   color: rgb(197, 197, 197);
 }
 
-.playlistHeader .info h2 a {
+.playlistHeader .info a h2 {
   color: rgb(197, 197, 197);
 }
 
-.playlistHeader .info h2 a:hover {
+.playlistHeader .info a h2:hover {
   color: #8dffff;
 }
 
@@ -78,6 +78,10 @@ div::-webkit-scrollbar-thumb {
 
 .text-bigger {
   font-size: large;
+}
+
+.text-regular {
+  font-weight: bold;
 }
 
 .song-table > hr {
@@ -165,4 +169,21 @@ div::-webkit-scrollbar-thumb {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+.playlist-button-bar {
+  margin-left: 10px;
+  margin-top: 15px;
+  display: flex;
+  column-gap: 10px;
+}
+
+.playlist-button-bar img {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.playlist-button-bar img:hover {
+  filter: sepia(79%) saturate(1000%) hue-rotate(86deg);
 }
