--- a/src/components/Left/Sidebar.css
+++ b/src/components/Left/Sidebar.css
@@ -7,4 +7,20 @@
   width: 100%;
   background-color: rgb(19, 19, 19);
   border-radius: 25px;
+  overflow-y: scroll;
+}
+
+div::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar {
+  width: 12px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #818181;
 }
