--- a/src/components/Middle/MyPlaylistPage.css
+++ b/src/components/Middle/MyPlaylistPage.css
@@ -20,17 +20,17 @@
   margin-top: 15px;
 }
 
-div::-webkit-scrollbar-track {
+.myAlbums::-webkit-scrollbar-track {
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0);
 }
 
-div::-webkit-scrollbar {
+.myAlbums::-webkit-scrollbar {
   width: 12px;
   background-color: rgba(0, 0, 0, 0);
 }
 
-div::-webkit-scrollbar-thumb {
+.myAlbums::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: #818181;
 }
