--- a/src/components/Middle/Account/AccountPage.css
+++ b/src/components/Middle/Account/AccountPage.css
@@ -20,6 +20,9 @@
   margin-top: 50px;
 }
 
+.account-page section{
+  margin-top:20px;
+}
 .account-layout header {
   max-height: 175px;
   width: 100%;
