--- a/src/components/Containers/Popup.css
+++ b/src/components/Containers/Popup.css
@@ -7,7 +7,9 @@
   align-items: center;
   position: fixed;
   top: 0;
+  right: 0;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   opacity: 0%;
