--- a/src/components/Containers/ContextMenus/SongContextMenu.css
+++ b/src/components/Containers/ContextMenus/SongContextMenu.css
@@ -17,37 +17,29 @@
 }
 
 .song-context-content {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  padding-left: 15px;
+  overflow: hidden;
 }
 
-#AdditionalOptions {
-  --mouse-x: 0;
-  --mouse-y: 0;
-  background-color: #242424;
-
-  display: none;
-  position: fixed;
-  left: 150px;
-  top: 0;
-  transform: translateX(min(var(--mouse-x), calc(100vw - 100%)))
-    translateY(min(var(--mouse-y), calc(100vh - 100%)));
-  z-index: 10000;
-
-  width: 150px;
-  border-radius: 5%;
-  user-select: none;
+#AddToPlaylist
+{
+  display: block;
+  height: fit-content;
+  max-height: 50vh;
+  background-color: blue;
 }
 
 /*Add to Playlist Content*/
 #AddToPlaylist .popup-content {
+  
   display: block;
   width: 350px;
   height: fit-content;
   max-height: 50vh;
   background-color: black;
+  background-color: red;
   align-items: center;
   overflow-y: scroll;
 }
@@ -62,15 +54,4 @@
   background-color: black;
 }
 
-.contextButton {
-  display: flex;
-  height: 35px;
-  border-radius: 5%;
-  align-items: center;
-}
 
-.contextButton:hover {
-  cursor: pointer;
-
-  background-color: rgb(52, 52, 52);
-}
