Updated Popup System

--- a/src/components/Containers/Popup.css
+++ b/src/components/Containers/Popup.css
@@ -1,6 +1,6 @@
 .popup-box {
   background-color: rgb(1, 1, 1, 85%);
-
+color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
