--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@
     "foot  foot";
 
   background-color: black;
-  color: white;
+  color: white !important;
+
   gap: 0.75em;
   grid-template-rows: 1fr 75px;
   grid-template-columns: 300px 1fr;
