--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -98,7 +98,7 @@ div::-webkit-scrollbar-thumb {
 
 .song-table {
   display: grid;
-  grid-template-columns: 62px 50% 20% 10%;
+  grid-template-columns: 62px 30% 20% 20% 10%;
   row-gap: 10px;
   width: calc(100% - 150px);
   grid-auto-rows: 1fr;
@@ -151,6 +151,14 @@ div::-webkit-scrollbar-thumb {
         <img className="audioGIF"src={"https://open.spotifycdn.com/cdn/images/equaliser-animated-green.f5eb96f2.gif"} />
 
 */
+
+.song-row-views
+{
+  display: flex;
+  align-items: center;
+}
+
+
 .song-row-artists ul {
   list-style: none;
   margin: 0;
@@ -173,7 +181,8 @@ div::-webkit-scrollbar-thumb {
 }
 
 .song-row-album {
-  padding-top: 18.2px;
+  display: flex;
+  align-items: center;
   padding-right: 50px;
 }
 .song-row-album a {
@@ -181,7 +190,8 @@ div::-webkit-scrollbar-thumb {
 }
 
 .song-row-date {
-  padding-top: 18.2px;
+  display: flex;
+  align-items: center;
 }
 
 .overflow-ellipsis {
