--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -2,8 +2,6 @@
   width: 100%;
   height: 100%;
 
-  align-self: center;
-  justify-self: center;
   background-size: cover;
 
   display: grid;
@@ -34,9 +32,10 @@ div::-webkit-scrollbar-thumb {
 .Playlist-Layout {
   /* When song is active for a bit
   transition with this filter: opacity(0%);*/
-
-  margin-left: 100px;
+  /*margin-left: 100px;*/
   margin-top: 50px;
+  justify-self: center;
+  width: 90%;
 }
 
 .playlistHeader {
@@ -98,14 +97,20 @@ div::-webkit-scrollbar-thumb {
 
 .song-table {
   display: grid;
-  grid-template-columns: 62px 30% 20% 20% 10% 10%;
+  grid-template-columns: 62px 30% 20% 20% 10% 5%;
   row-gap: 10px;
-  width: calc(100% - 150px);
+  /*width: calc(100% - 150px);*/
   grid-auto-rows: 1fr;
   justify-content: center;
-  margin-left: -45px;
+  /*margin-left: -45px;*/
+  margin-bottom: 0;
+  margin-top: 20px;
 }
 
+.song-table ul {
+  list-style-type: none;
+  list-style: none;
+}
 .song-row {
   display: contents;
   user-select: none;
@@ -152,12 +157,10 @@ div::-webkit-scrollbar-thumb {
 
 */
 
-.song-row-views
-{
+.song-row-views {
   display: flex;
   align-items: center;
 }
-
 
 .song-row-artists ul {
   list-style: none;
@@ -167,9 +170,9 @@ div::-webkit-scrollbar-thumb {
 
 .song-row-artists li {
   display: inline-block;
-  margin-right: 10px;
   white-space: none;
   color: rgb(197, 197, 197);
+  margin-right: 5.5px;
 }
 
 .song-row-artists li:after {
