--- a/src/components/Middle/MyPlaylistPage.css
+++ b/src/components/Middle/MyPlaylistPage.css
@@ -16,8 +16,17 @@
 }
 
 .myPlaylists-layout {
-  margin-left: 100px;
-  margin-top: 15px;
+  margin-top: 50px;
+  justify-self: center;
+  width: 90%;
+}
+
+.myPlaylists-page h1 {
+  margin: 0;
+  overflow-x: hidden;
+  height: 70px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .myPlaylists-page section {
@@ -48,7 +57,8 @@
   flex-direction: column;
 }
 
-.myPlaylists-layout header {}
+.myPlaylists-layout header {
+}
 
 .myPlaylists-layout .myAlbums {
   display: flex;
