Added song ordering

--- a/src/components/Middle/Discover.css
+++ b/src/components/Middle/Discover.css
@@ -1,6 +1,6 @@
 .discover-page {
   width: 100%;
-
+  height: 100%;
   background-size: cover;
 
   display: grid;
@@ -11,6 +11,7 @@
 
   overflow-y: auto;
   user-select: none;
+  scrollbar-gutter: stable; /*Keeps the page from shifting*/
 }
 
 .discover-layout {
