--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -12,6 +12,7 @@
 
   overflow-y: auto;
   user-select: none;
+  scrollbar-gutter: stable; /*Keeps the page from shifting*/
 }
 
 div::-webkit-scrollbar-track {
