--- a/src/components/Containers/SongOrderList.css
+++ b/src/components/Containers/SongOrderList.css
@@ -1,18 +1,39 @@
-.songOrderContainer {
+#songOrderContainer {
   display: flex;
   flex-direction: column;
-  list-style: none;
+  list-style: decimal;
   row-gap: 10px;
+  overflow-y: auto;
+  height: 400px;
+  width: 300px;
+
+  scroll-snap-type: mandatory;
 }
 
 .songOrderItem {
+  display: flex;
+  flex-shrink: none;
+  column-gap: 10px;
+  align-content: center;
+  align-items: center;
   user-select: none;
-  background-color: black;
+  background-color: rgb(35, 35, 35);
+  height: 50px;
+  min-height: 50px;
+  padding-inline: 10px;
+  border-radius: 50px;
 }
 
-.songOrderItem-Follow {
-  background-color: red;
-  opacity: 50%;
+.songOrderItem:hover{
+  cursor: pointer;
+
+  transition: all 0.2s ease-in;
+  background-color: rgb(52, 52, 52);
+}
+
+.songOrderItem-Follow:hover {
+  background-color: rgb(141, 255, 255);
+  color: black;
   /*--mouse-y: 0;
   background-color: red;
   position: fixed;
