--- a/src/components/Containers/Playlist Containers/PlaylistContainer.css
+++ b/src/components/Containers/Playlist Containers/PlaylistContainer.css
@@ -27,13 +27,18 @@
 }
 
 .pl-container-name_holder {
-  max-width: 85%;
-  font-size: 20px;
-
+  max-width: 95%;
+  font-size: 18px;
   white-space: nowrap;
   text-overflow: ellipsis;
   display: block;
   overflow: hidden;
+}
+
+.pl-container-content .customLink {
+  max-width: 95%;
+  font-size: 14.5px;
+  margin-bottom: -10px;
 }
 
 .PlaylistContainer:hover {
@@ -49,5 +54,5 @@
   width: 130px;
   height: 130px;
   background-color: rgb(24, 24, 24);
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
