Fixed bugs and updated login

--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -120,7 +120,7 @@
 }
 
 #progress-bar-container-touch:hover #progress-bar-handle {
-  visibility: visible;
+  visibility: visible !important;
 }
 
 #volume-control {
