Added rename context features and password resetting

--- a/src/Links.css
+++ b/src/Links.css
@@ -1,7 +1,9 @@
 .customLink {
   color: rgb(197, 197, 197);
+  user-select: none;
 }
 
 .customLink:hover {
   color: #8dffff;
+  cursor: pointer;
 }
