Finished Queue System

--- a/src/components/Containers/Popups/SongOrderList.css
+++ b/src/components/Containers/Popups/SongOrderList.css
@@ -34,6 +34,8 @@
   min-height: 50px;
   padding-inline: 10px;
   border-radius: 50px;
+  margin-top: 7.5px;
+  margin-bottom: 7.5px;
 }
 
 .songOrderItem .number {
