--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -162,3 +162,39 @@
   width: 25px;
   margin-right: 15px;
 }
+
+.fullscreen-button {
+  height: 20px;
+  width: 20px;
+  margin-right: 15px;
+  margin-top: 2.5px;
+}
+
+:-webkit-full-screen {
+  #Soundbar {
+    position: fixed;
+    display: flex;
+    background: transparent;
+    flex-direction: row;
+    width: 100vw;
+    height: 58px;
+    overflow: hidden;
+    background: transparent;
+    user-select: none;
+    justify-content: center;
+    align-items: center;
+    margin-top: -4px;
+  }
+
+  /*Sliders*/
+  #progress-bar-container-touch {
+    position: relative;
+    cursor: pointer;
+    height: 20px;
+    background: transparent;
+    margin-top: -5px;
+
+    display: flex;
+    align-items: center;
+  }
+}
