--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -9,24 +9,48 @@
   flex-direction: row;
   width: 100vw;
   height: 58px;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: black;
   user-select: none;
   justify-content: center;
   align-items: center;
   margin-top: -4px;
-  
+}
+
+#control-like-btn {
+  width: 500px;
+  max-height: 35px;
+  max-width: 35px;
+  display: flex;
+  align-self: center;
+  margin-left: 25px;
+  margin-bottom: 5px;
+}
+
+#control-like-btn:hover {
+  content: url("../../../src/assets/star-solid.svg");
+  filter: sepia(79%) saturate(1000%) hue-rotate(86deg);
+}
+
+#name-area-parent {
+  display: flex;
+  -webkit-overflow-scrolling: none;
+  white-space: nowrap;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 40%;
 }
 
 #player-name-area {
   -webkit-overflow-scrolling: none;
   white-space: nowrap;
   padding-bottom: 5px;
-  padding-top: 10px;
+
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  width: 40%;
 }
 
 #player-name-area > .name-area-content {
@@ -52,19 +76,6 @@
   display: flex;
   justify-content: flex-end;
   width: 40%;
-}
-
-#control-like-btn {
-  max-height: 35px;
-  max-width: 35px;
-  display: flex;
-  align-self: center;
-  margin-left: 25px;
-}
-
-#control-like-btn:hover {
-  content: url("../../../src/assets/star-solid.svg");
-  filter: sepia(79%) saturate(1000%) hue-rotate(86deg);
 }
 
 .controls {
@@ -96,7 +107,6 @@
   position: relative;
   cursor: pointer;
   height: 20px;
-  background-color: black;
   margin-top: -5px;
 
   display: flex;
@@ -151,7 +161,6 @@
 }
 
 .time {
-
   display: flex;
   width: 50px;
   justify-content: center;
@@ -165,11 +174,30 @@
   margin-right: 15px;
 }
 
+.queue-button:hover {
+  filter: invert(100%) sepia(79%) saturate(1000%) hue-rotate(86deg);
+}
+
 .fullscreen-button {
   height: 20px;
   width: 20px;
   margin-right: 15px;
   margin-top: 2.5px;
+}
+
+.fullscreen-button:hover {
+  filter: sepia(79%) saturate(1000%) hue-rotate(86deg);
+}
+
+#loop-button {
+  height: 22.5px;
+  width: 22.5px;
+  margin-right: 15px;
+  margin-top: 2.5px;
+}
+
+#loop-button:hover {
+  filter: sepia(79%) saturate(1000%) hue-rotate(86deg);
 }
 
 :-webkit-full-screen {
@@ -180,7 +208,6 @@
     flex-direction: row;
     width: 100vw;
     height: 58px;
-    overflow: hidden;
     background: transparent;
     user-select: none;
     justify-content: center;
