--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -11,6 +11,7 @@
   height: 58px;
   /* overflow: hidden; */
   background-color: black;
+
   user-select: none;
   justify-content: center;
   align-items: center;
@@ -51,6 +52,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  max-width: 50%;
 }
 
 #player-name-area > .name-area-content {
