Added Some Mobile Support
Yes. I hate this.

--- a/src/components/Middle/Playlist.css
+++ b/src/components/Middle/Playlist.css
@@ -13,6 +13,8 @@
   overflow-y: auto;
   user-select: none;
   scrollbar-gutter: stable; /*Keeps the page from shifting*/
+  overflow-x: hidden !important;
+
 }
 
 div::-webkit-scrollbar-track {
