--- a/src/components/Containers/SidebarButton.css
+++ b/src/components/Containers/SidebarButton.css
@@ -10,7 +10,6 @@
   display: flex;
 }
 
-
 .SidebarButton p {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -21,8 +20,6 @@
   width: 10%;
   margin-right: 25px;
   margin-left: 15px;
-
-  filter: invert(100%);
 }
 
 .SidebarButton:hover {
@@ -33,7 +30,7 @@
 .SidebarButton:hover img {
   transition: all 0.12s ease-in;
   width: 12%;
-  filter: invert(100%) sepia(79%) saturate(1000%) hue-rotate(86deg);
+  filter: sepia(79%) saturate(1000%) hue-rotate(86deg);
 }
 
 /*
