--- a/src/components/Music Control.css
+++ b/src/components/Music Control.css
@@ -170,14 +170,13 @@
 }
 
 .queue-button {
-  filter: invert(100%);
   height: 25px;
   width: 25px;
   margin-right: 15px;
 }
 
 .queue-button:hover {
-  filter: invert(100%) sepia(79%) saturate(1000%) hue-rotate(86deg);
+  filter: sepia(79%) saturate(1000%) hue-rotate(86deg);
 }
 
 .fullscreen-button {
