--- a/src/mobile.css
+++ b/src/mobile.css
@@ -1,4 +1,8 @@
 @media screen and (min-width: 821px) {
+  :root {
+    height: 100%;
+  }
+
   .mobile-view {
     display: none;
     visibility: hidden;
