--- a/src/mobile.css
+++ b/src/mobile.css
@@ -174,6 +174,7 @@
 
   .playlist-button-bar {
     margin-bottom: 15px;
+    justify-content: center;
   }
 
   .mobile-song-view {
@@ -223,8 +224,8 @@
   .mobile-song-row {
     display: flex;
     align-items: center;
-    justify-self: center;
-    width: 1440% !important;
+    justify-self: start;
+
     max-width: 125% !important;
   }
 
